--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
 					  <input type="text" value="" class="form-control mb-5 required" placeholder="Name" name="FNAME" id="mce-FNAME">
 					</div>
 					<div class="col-lg-4 mc-field-group">
-					  <input type="email" value="" class="form-control mb-5 required email" placeholder="Email" name="Email" id="mce-EMAIL">
+					  <input type="email" value="" class="form-control mb-5 required email" placeholder="Email" name="EMAIL" id="mce-EMAIL">
 					</div>
 					<div id="mce-responses" class="clear">
 						<div class="response" id="mce-error-response" style="display:none"></div>
@@ -22,6 +22,7 @@
 				</div>
 				  </form>
 			</div>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
 
 		</div>
