fixed font spacing

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -70,7 +70,7 @@
         </ul>
         <div class="nav-item text-light">
           <a class="nav-link"
-            href="#">11:11</a>
+            href="english/love">Love</a>
         </div>
       </div>
     </nav>
