changes to branding

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -12,9 +12,9 @@
             {{ .Content | markdownify }}
             <div class="mt-4">
               <p class="mb-3 font-weight-normal"><a class="text-dark" href="mailto:{{site.Params.email}}">Email: {{site.Params.email}}</a></p>
-             <p class="mb-3"><span><a class="text-dark social-background" href="https://web.facebook.com/jamila.mustapha3">Facebook</a></span>
-              <span><a class="text-dark social-background" href="https://www.instagram.com/jamilamustaphaa/">Instagram</a></span>
-              <span><a class="text-dark social-background" href="https://www.linkedin.com/in/jamila-mustapha-8180a797/">LinkedIn</a></span></p>
+             <p class="mb-3"><span><a class="text-dark social-background" href="https://www.instagram.com/infinitude11/">Instagram</a></span>
+              <span><a class="text-dark social-background" href="https://www.tiktok.com/@infinitude11">Tiktok</a></span>
+              <span><a class="text-dark social-background" href="https://www.youtube.com/channel/UCtzgR46uuVlL6Vc9AellN6g">Youtube</a></span></p>
               <p class="mb-2">Address: {{site.Params.address}}</p>
             </div>
             
